Shenandoah: Lock rank inversion after JDK-8212879

XMLWordPrintable

    • gc
    • b26

      After JDK-8212879, gc_notification() takes JvmtiTagMap_lock/24, while ShenandoahConcurrentWeakRootsEvacUpdateTask holds StringDedupQueue_lock/11.

      # Internal Error (/home/zgu/ws/jdk/src/hotspot/share/runtime/mutex.cpp:457), pid=837435, tid=837442
      # fatal error: acquiring lock JvmtiTagMap_lock/24 out of order with lock StringDedupQueue_lock/11 -- possible deadlock
      #
      # JRE version: OpenJDK Runtime Environment (16.0) (fastdebug build 16-internal+0-adhoc.zgu.jdk)
      # Java VM: OpenJDK 64-Bit Server VM (fastdebug 16-internal+0-adhoc.zgu.jdk, mixed mode, sharing, tiered, compressed oops, shenandoah gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x14e1c5b] Mutex::set_owner_implementation(Thread*)+0x43b

            Assignee:
            Zhengyu Gu
            Reporter:
            Zhengyu Gu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: