8256688: Shenandoah: Lock rank inversion after JDK-8212879

Reviewed-by: rkennke